--- a/my_website/index.html
+++ b/my_website/index.html
@@ -13,6 +13,6 @@
       <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
     </div>
-    <h1>Welcome to the Quangster's Website!</h1>
+    <h1>Welcome to Quang's Home Page!</h1>
   </body>
 </html>
