--- a/my_website/index.html
+++ b/my_website/index.html
@@ -13,6 +13,7 @@
       <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
     </div>
-    <h1>Welcome to Quang's Home Page!</h1>
+    <header><h1>Welcome to Quang's Home Page!</h1></header>
+    <p>This website contains Quang</p>
   </body>
 </html>
