--- a/my_website/index.html
+++ b/my_website/index.html
@@ -6,6 +6,8 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    
+    <header><h1>Welcome to Quang's Home Page!</h1></header>
     <div>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -13,7 +15,6 @@
       <li><a href="portfolio.html">Portfolio</a></li>
     </ul>
     </div>
-    <header><h1>Welcome to Quang's Home Page!</h1></header>
-    <p>This website contains Quang</p>
+    <p class ="desc">This website contains Quang's amazing files!</p>
   </body>
 </html>
