Finished for Friday

--- a/my_website/about.html
+++ b/my_website/about.html
@@ -78,9 +78,9 @@
         
         <div class="source">
         <h2 class="source"><u>Image Sources</u></h2>
-          <ul style="list-style-type: none">
-            <li>wikihow.com</li>
-            <li>androidlify.com</li>
+          <ul style="list-style-type: circle">
+            <a href="http://www.wikihow.com/images/f/f6/Make-Sticky-Rice-Using-Regular-Rice-Intro.jpg"><li>wikihow.com</li></a>
+            <a href="https://www.androidify.com/en/#/"><li>androidlify.com</li></a>
           </ul>
         </div>
         </div>
