--- a/my_website/index.html
+++ b/my_website/index.html
@@ -27,7 +27,7 @@
       <div class="source">
         <h2 class="source"><u>Image Sources</u></h2>
           <ul>
-            <li>giphy.com</li>
+            <a href="https://giphy.com/gifs/cheer-cheering-11sBLVxNs7v6WA"><li>giphy.com</li></a>
           </ul>
       </div>
     
