--- a/my_website/index.html
+++ b/my_website/index.html
@@ -24,12 +24,13 @@
     <marquee behavior="alternate"><a href="videos/RickRoll.mp4"><img class="happy" src="images/happy.gif" style="width:900px;height:450px;"></a></marquee>
     </center>
     
-      <div class="source">
-        <h2 class="source"><u>Image Sources</u></h2>
-          <ul>
-            <a href="https://giphy.com/gifs/cheer-cheering-11sBLVxNs7v6WA"><li>giphy.com</li></a>
-          </ul>
-      </div>
+    <hr width="100%">
+    <div class="source">
+      <h2 class="source"><u>Image Sources</u></h2>
+        <ul>
+          <a href="https://giphy.com/gifs/cheer-cheering-11sBLVxNs7v6WA"><li>giphy.com</li></a>
+        </ul>
+    </div>
     
   </body>
 </html>
