--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -19,7 +19,7 @@
     </div>
     
     <hr width="100%">
-    <h2 class="explain"><ins>The Game: KappaPride Arcade</ins></h2>
+    <h2 class="game"><ins>The Game: KappaPride Arcade</ins></h2>
     <a href="https://scratch.mit.edu/projects/129346287/"><img class="kappa" src="images/KappaPride.PNG" style="width:500px;height:350px;"></a>
     <a href="https://scratch.mit.edu/projects/127656891/#player"><img class="firstgame" src="images/firstgame.PNG" style="width:500px;height:350px;"></a>
     
