--- a/my_website/index.html
+++ b/my_website/index.html
@@ -28,7 +28,7 @@
     <div class="source">
       <h2 class="source"><u>Image Sources</u></h2>
         <ul>
-          <a href="https://giphy.com/gifs/cheer-cheering-11sBLVxNs7v6WA"><li>giphy.com</li></a>
+          <li><a href="https://giphy.com/gifs/cheer-cheering-11sBLVxNs7v6WA">giphy.com</a></li>
         </ul>
     </div>
     
