--- a/my_website/about.html
+++ b/my_website/about.html
@@ -79,8 +79,8 @@
         <div class="source">
         <h2 class="source"><u>Image Sources</u></h2>
           <ul style="list-style-type: circle">
-            <a href="http://www.wikihow.com/images/f/f6/Make-Sticky-Rice-Using-Regular-Rice-Intro.jpg"><li>wikihow.com</li></a>
-            <a href="https://www.androidify.com/en/#/"><li>androidlify.com</li></a>
+            <li><a href="http://www.wikihow.com/images/f/f6/Make-Sticky-Rice-Using-Regular-Rice-Intro.jpg">wikihow.com</a></li>
+            <li><a href="https://www.androidify.com/en/#/">androidlify.com</a></li>
           </ul>
         </div>
         </div>
