--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -63,7 +63,7 @@
     We learned that the error outputs from indentation issues were due to the copy-and-pasting of the entire code (the first draft) from google docs. Therefore, we rewrote everything from scratch.
     In my sincerest opinion, the work was fairly easy. The story itself was fun to write due to its creativity and ability to have many possible endings. However, the code was rather repetitive and mundane.
     When experiencing the stories, the one that stood out to me was a foreign exchange student going to Japan because of its rather abrupt and random endings. Despite the continuous plot, almost all of the endings were death by something unrelated to the situation.
-    The other one that successfully humored me not for its plot but for its reference to another student was the story about about Bteven Sao. If I had a chance to do this over again, I would change the code so that everytime that the narrator receives the invalid message,
+    The other one that successfully humored me not for its plot but for its reference to another student was the story about Bteven Sao. If I had a chance to do this over again, I would change the code so that everytime that the narrator receives the invalid message,
     they wouldn't have to start all over. I would also improve the story by adding in more minor details and decision points.
     </p>
     
