--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -61,7 +61,7 @@
     A second function was defined for organizing the decision points. We used if-elif-else to input each branched off point for the narrator to choose to print. Problems included really long lines of code at first and
     error outputs from indentation issues. We solved the excessive lines of code issue by defining one function for the decision points. Each time there is a decision point, the code will check this function to continue the story respective to the raw input.
     We learned that the error outputs from indentation issues were due to the copy-and-pasting of the entire code (the first draft) from google docs. Therefore, we rewrote everything from scratch.
-    In my sincerest opinion, the work was fairly easy. The story itself was fun to write due to its creativity and ability to have many possible endings. However, the code was rather repetitive and mundane.
+    Overall, the work was fairly easy. The story itself was fun to write due to its creativity and ability to have many possible endings. However, the code was rather repetitive and mundane.
     When experiencing the stories, the one that stood out to me was a foreign exchange student going to Japan because of its rather abrupt and random endings. Despite the continuous plot, almost all of the endings were death by something unrelated to the situation.
     The other one that successfully humored me not for its plot but for its reference to another student was the story about Bteven Sao. If I had a chance to do this over again, I would change the code so that everytime that the narrator receives the invalid message,
     they wouldn't have to start all over. I would also improve the story by adding in more minor details and decision points.
