--- a/larry_page/webpage/larry.html
+++ b/larry_page/webpage/larry.html
@@ -82,12 +82,12 @@
               <td class="col2"><div class="date">March 26, 1973</div></td>
               <td class="col6 pl-30">
                 <p class="event">Birth</p>
-                <img src="images/birthday.jpg" width="325" height="250">
+                <img src="images/birthday.jpg" width="325" height="250" border-color="white">
                 <p class="description">Born as Lawrence Page to Carl and Gloria Page.</p>
               </td>
             </tr>
             <tr>
-              <td class="col2"><div class="date">1975 – 1979</span></td>
+              <td class="col2"><div class="date">1975 – 1979</div></td>
               <td class="col6 pl-30">
                 <p class="event">Montessori Radmoor</p>
                 <img src="images/primaryschool.jpg" width="400" height="250">
@@ -96,7 +96,7 @@
               </td>
             </tr>
             <tr>
-              <td class="col2"><div class="date">1987 – 1991</span></td>
+              <td class="col2"><div class="date">1987 – 1991</div></td>
               <td class="col6 pl-30">
                 <p class="event">East Lansing High School</p>
                 <img src="images/Highschool.jpg" width="400" height="250">
@@ -104,7 +104,7 @@
               </td>
             </tr>
             <tr>
-              <td class="col2"><div class="date">1993</span></td>
+              <td class="col2"><div class="date">1993</div></td>
               <td class="col6 pl-30">
                 <p class="event">University of Michigan</p>
                 <img src="images/UM.jpg" alt="University of Michigan" width="300" height="200">
@@ -112,7 +112,7 @@
               </td>
             </tr>
             <tr>
-              <td class="col2"><div class="date">1995</span></td>
+              <td class="col2"><div class="date">1995</div></td>
               <td class="col6 pl-30">
                 <p class="event">Sergey Brin</p>
                 <img src="images/Sergey.jpg" width="300" height="200">
@@ -120,7 +120,7 @@
               </td>
             </tr>
             <tr>
-              <td class="col2"><div class="date">September 1998</span></td>
+              <td class="col2"><div class="date">September 1998</div></td>
               <td class="col6 pl-30">
                 <p class="event">Google</p>
                 <img src="images/google1998.jpg" width="300" height="200">
@@ -128,7 +128,7 @@
               </td>
             </tr>
             <tr>
-              <td class="col2"><div class="date">January 2011</span></td>
+              <td class="col2"><div class="date">January 2011</div></td>
               <td class="col6 pl-30">
                 <p class="event">Chief executive officer</p>
                 <img src="images/ceotakeover.jpg" alt="University of Michigan" width="300" height="200">
