--- a/larry_page/webpage/larry.html
+++ b/larry_page/webpage/larry.html
@@ -82,7 +82,7 @@
               <td class="col2"><div class="date">March 26, 1973</div></td>
               <td class="col6 pl-30">
                 <p class="event">Birth</p>
-                <img src="images/birthday.jpg" width="325" height="250" border-color="white">
+                <img src="images/birthday.jpg" width="325" height="250" class="image">
                 <p class="description">Born as Lawrence Page to Carl and Gloria Page.</p>
               </td>
             </tr>
@@ -90,7 +90,7 @@
               <td class="col2"><div class="date">1975 – 1979</div></td>
               <td class="col6 pl-30">
                 <p class="event">Montessori Radmoor</p>
-                <img src="images/primaryschool.jpg" width="400" height="250">
+                <img src="images/primaryschool.jpg" width="400" height="250" class="image">
                 <p class="description">Larry attended the Montessori Radmoor primary school, formerly called
                 Okemos Montessori School, in Okemos, Michigan.</p>
               </td>
@@ -99,7 +99,7 @@
               <td class="col2"><div class="date">1987 – 1991</div></td>
               <td class="col6 pl-30">
                 <p class="event">East Lansing High School</p>
-                <img src="images/Highschool.jpg" width="400" height="250">
+                <img src="images/Highschool.jpg" width="400" height="250" class="image">
                 <p class="description">Larry graduated from East Lansing High School in 1991.</p>
               </td>
             </tr>
@@ -107,7 +107,7 @@
               <td class="col2"><div class="date">1993</div></td>
               <td class="col6 pl-30">
                 <p class="event">University of Michigan</p>
-                <img src="images/UM.jpg" alt="University of Michigan" width="300" height="200">
+                <img src="images/UM.jpg" alt="University of Michigan" width="300" height="200" class="image">
                 <p class="description">Larry joined the school's solar-car team.</p>
               </td>
             </tr>
@@ -115,7 +115,7 @@
               <td class="col2"><div class="date">1995</div></td>
               <td class="col6 pl-30">
                 <p class="event">Sergey Brin</p>
-                <img src="images/Sergey.jpg" width="300" height="200">
+                <img src="images/Sergey.jpg" width="300" height="200" class="image">
                 <p class="description">Larry met Sergey Brin at Stanford and together they created their search engine called 'Backrub' that operated at Stanford for months.</p>
               </td>
             </tr>
@@ -123,7 +123,7 @@
               <td class="col2"><div class="date">September 1998</div></td>
               <td class="col6 pl-30">
                 <p class="event">Google</p>
-                <img src="images/google1998.jpg" width="300" height="200">
+                <img src="images/google1998.jpg" width="300" height="200" class="image">
                 <p class="description">Google officially launched as a company and Eric Schmidt was made CEO. Page and Brin were presidents of products and technology.</p>
               </td>
             </tr>
@@ -131,7 +131,7 @@
               <td class="col2"><div class="date">January 2011</div></td>
               <td class="col6 pl-30">
                 <p class="event">Chief executive officer</p>
-                <img src="images/ceotakeover.jpg" alt="University of Michigan" width="300" height="200">
+                <img src="images/ceotakeover.jpg" alt="University of Michigan" width="300" height="200" class="image">
                 <p class="description">(Page (left) and Schmidt (right))<br>
                 Larry becomes CEO again (after stepping down back in 2001).</p>
               </td>
