--- a/larry_page/webpage/larry.html
+++ b/larry_page/webpage/larry.html
@@ -133,7 +133,7 @@
                 <p class="event">Chief executive officer</p>
                 <img src="images/ceotakeover.jpg" alt="University of Michigan" width="300" height="200" class="image">
                 <p class="description">(Page (left) and Schmidt (right))<br>
-                Larry becomes CEO again (after stepping down back in 2001).</p>
+                Larry becomes CEO again (after stepping down back in 2001). Larry becomes CEO because Facebook CEO pushed to become the #1 used website.
               </td>
             </tr>
           </tbody>
@@ -155,6 +155,7 @@
               in experimental technology.</li>
             </ul>
             <br>
+            <hor>
             
         <h3><center>Awards and Recognition</center></h3>
             <ul id="awards">
