--- a/larry_page/webpage/larry.html
+++ b/larry_page/webpage/larry.html
@@ -131,7 +131,7 @@
               <td class="col2"><div class="date">January 2011</div></td>
               <td class="col6 pl-30">
                 <p class="event">Chief executive officer</p>
-                <img src="images/ceotakeover.jpg" alt="University of Michigan" width="300" height="200" class="image">
+                <div class="image"><img src="images/ceotakeover.jpg" alt="CEO Takeover" width="300" height="200"></div>
                 <p class="description">(Page (left) and Schmidt (right))<br>
                 Larry becomes CEO again (after stepping down back in 2001). Larry becomes CEO because Facebook CEO pushed to become the #1 used website.
               </td>
