--- a/larry_page/webpage/larry.html
+++ b/larry_page/webpage/larry.html
@@ -144,7 +144,7 @@
         <h3><center>Contributions</center></h3> 
             <ul id="contributions">
               <li>Larry Page co-founded the world's leading search engine for millions of users. The development of Google allowed for 
-              the interconnectiveness of the web by efficiently sifting through enormous piles of information for searches. The
+              the interconnectiveness of the web by efficiently sifting through enormous piles of information for searches based on popularity. The
               high depth of abstraction made searches based on popularity for everyday users possible. The wide range of applications that grew
               from Google such as Google Maps, Google Drive, and Gmail integrated many features outide of the original goal for Google Inc. and brought
               forth a new era of computing.</li>
