--- a/larry_page/webpage/larry.html
+++ b/larry_page/webpage/larry.html
@@ -143,23 +143,19 @@
       <div id="significance" class="section">
         <h3><center>Contributions</center></h3> 
             <ul id="contributions">
-              <li>Larry Page co-founded the world's leading search engine for millions of users.</li> 
-                 <p class="con">The development of Google allowed for the interconnectiveness of the web by efficiently sifting through enormous piles of information for searches based on popularity. The
-                 high depth of abstraction made searches based on popularity for everyday users possible. The wide range of applications that grew
-                 from Google such as Google Maps, Google Drive, and Gmail integrated many features outide of the original goal for Google Inc. and brought
-                 forth a new era of computing.
-                 </p>
+              <li class="con">Larry Page co-founded the world's leading search engine for millions of users.
+              The development of Google allowed for the interconnectiveness of the web by efficiently sifting through enormous piles of information for searches based on popularity. The
+              high depth of abstraction made searches based on popularity for everyday users possible. The wide range of applications that grew
+              from Google such as Google Maps, Google Drive, and Gmail integrated many features outide of the original goal for Google Inc. and brought
+              forth a new era of computing.</li>
               <br>
-              <li>Larry Page, with Sergery Brin and Eric Schmidt, created the parent company Alphabet to oversee Google and to find technological solutions 
-              to solve world problems.</li> 
-                <p class="con">The reorganisation of Google into serveral companies united under Alphabet Inc. will still leave Google
-                as one large company. This allows for other subsidiaries such as Google X to have more autonomy when it comes to its research
-                in experimental technology.
-                </p>
-              <hr>
+              <li class="con">Larry Page, with Sergery Brin and Eric Schmidt, created the parent company Alphabet to oversee Google and to find technological solutions 
+              to solve world problems. The reorganisation of Google into serveral companies united under Alphabet Inc. will still leave Google
+              as one large company. This allows for other subsidiaries such as Google X to have more autonomy when it comes to its research
+              in experimental technology. </li>
+              <br>
             </ul>
             <hr>
-            <br>
             
         <h3><center>Awards and Recognition</center></h3>
             <ul id="awards">
