--- a/larry_page/webpage/larry.html
+++ b/larry_page/webpage/larry.html
@@ -144,7 +144,7 @@
               <td class="col2"><div class="date">January 2011</div></td>
               <td class="col6 pl-30">
                 <p class="event">Chief executive officer</p>
-                <img src="images/ceotakeover.jpg" alt="CEO Takeover" width="300" height="200" class="image">
+                <img src="images/ceotakeover.jpg" alt="CEO Takeover" width="300" height="250" class="image">
                 <p class="description">(Page (left) and Schmidt (right))<br>
                 Larry becomes CEO again (after stepping down back in 2001). Larry becomes CEO because Facebook CEO pushed to become the #1 used website.
               </td>
@@ -163,7 +163,7 @@
               from Google such as Google Maps, Google Drive, and Gmail integrated many features outide of the original goal for Google Inc. and brought
               forth a new era of computing.</p></li>
               <br>
-              <li><p class="con">Larry Page, with Sergery Brin and Eric Schmidt, created the parent company Alphabet to oversee Google and to find technological solutions 
+              <li><p class="con">Larry Page, with Sergery Brin and Eric Schmidt, created the parent company Alphabet in 2015 to oversee Google and to find technological solutions 
               to solve world problems. The reorganisation of Google into serveral companies united under Alphabet Inc. will still leave Google
               as one large company. This allows for other subsidiaries such as Google X to have more autonomy when it comes to its research
               in experimental technology.</p></li>
