--- a/larry_page/webpage/larry.html
+++ b/larry_page/webpage/larry.html
@@ -110,8 +110,9 @@
               <td class="col6 pl-30">
                 <p class="event">University of Michigan<br></p>
                 <img src="images/UM.jpg" alt="University of Michigan" width="300" height="200" class="image">
-                <p class="description">Larry joined the school's solar-car team. He graduated from the University of Michigan as an
-                  undergrad with a B.S. in Computer Engineering.</p>
+                <p class="description">Larry joined the school's solar-car team and created the solar-car known as Maize and Blue.
+                    It finished 11th in the 1993 World Solar Challenge and is on display at the Museum of Science and Industry in Chicago, Illinois.
+                    He graduated from the University of Michigan as an undergrad with a B.S. in Computer Engineering.</p>
               </td>
             </tr>
             <tr>
