--- a/larry_page/webpage/larry.html
+++ b/larry_page/webpage/larry.html
@@ -27,8 +27,8 @@
           <table id="bioinfo">
             <tbody>
               <tr>
-                <td class="odd">Name</td>
-                <td class="even">Lawrence (Larry) Page</td>
+                <td class="odd">Full Name</td>
+                <td class="even">Lawrence Edward Page</td>
               </tr>
               <tr>
                 <td class="odd">Date of birth</td>
@@ -56,7 +56,7 @@
               </tr>
               <tr>
                 <td class="odd">Net Worth</td>
-                <td class="even">$45 Billion</td>
+                <td class="even">$46.3 Billion</td>
               </tr>
             </tbody>
           </table>
